# ColourCalibrate

./: README.md
cpp/: CMakeLists.txt  ColorBar.h  ColorCalibrate.cpp  ColorCalibrate.h  colorBar.cpp  main.cpp
cpp/cuda/: CMakeLists.txt  acce.cu  acce.cuh
img/: readimg.py
py/: calibrate_example.py  colourCalibrate.py  generateColourBar.py
